--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,78 @@
     <link rel="stylesheet" href="/screen.css">
   </head>
   <body>
-    <h1>Hello, World!</h1>
+
+
+
+    <div class="header">
+
+      <div class="box">
+        <ul class="box1">
+         <li> <img src="designco-logo.png" height="16"></li>
+         <li> Home </li>
+         <li> Portfolio </li>
+         <li> About </li>
+         <li> Contact </li>
+       </ul>
+
+       <div class="box2">
+        <h3><img src="icon-search.png" alt="" height="18"/></h3>
+       </div>
+      </div>
+    </div>
+
+
+
+    <div class="body">
+      <h1>The Details Matter</h1>
+      <h4>We're making beautiful website layouts using modern methods.</h4>
+    </div>
+
+
+
+    <div class="gallery">
+
+
+      <div class="left-gallery">
+        <ul>
+          <li><img src="Estate Privacy.jpg" height="400px"></li>
+          <li><img src="Estate Privacy.jpg" height="180px" width="200px"></li>
+          <li><img src="Estate Privacy.jpg" height="180px" width="275px"></li>
+        </ul>
+      </div>
+
+
+      <div class="right-gallery">
+        <ul>
+          <li><img src="Estate Privacy.jpg" height="300px" width="420px"></li>
+          <li><img src="Estate Privacy.jpg" height="280px" width="420px"></li>
+        </ul>
+      </div>
+
+
+    </div>
+
+
+
+    <div class="footer">
+      <div class="footer-left">
+        <ul>
+          <h4>What's New</h4>
+          <h5>We always have new projects that clients hire us for.</h5>
+          <h6><u>View recent projects.</u></h6>
+        </ul>
+      </div>
+      <div class="footer-right">
+        <h4>Modern Layouts</h4>
+        <ul>
+          <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h5>
+          <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h5>
+          <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h5>
+        </ul>
+      </div>
+    </div>
+
+
+
   </body>
 </html>
