--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
       <div class="box">
         <ul class="box1">
-         <li> <img src="designco-logo.png" height="16"></li>
+         <li> <img src="designco-logo.png" height="16"> </li>
          <li> Home </li>
          <li> Portfolio </li>
          <li> About </li>
@@ -41,9 +41,9 @@
 
       <div class="left-gallery">
         <ul>
-          <li><img src="Estate Privacy.jpg" height="400px"></li>
-          <li><img src="Estate Privacy.jpg" height="180px" width="200px"></li>
-          <li><img src="Estate Privacy.jpg" height="180px" width="275px"></li>
+          <li> <img src="Estate Privacy.jpg" height="400px"> </li>
+          <li> <img src="Estate Privacy.jpg" height="180px" width="200px"> </li>
+          <li> <img src="Estate Privacy.jpg" height="180px" width="275px"> </li>
         </ul>
       </div>
 
@@ -63,17 +63,17 @@
     <div class="footer">
       <div class="footer-left">
         <ul>
-          <h4>What's New</h4>
-          <h5>We always have new projects that clients hire us for.</h5>
-          <h6><u>View recent projects.</u></h6>
+          <li> <h4>What's New</h4> </li>
+          <li> <h5>We always have new projects that clients hire us for.</h5> </li>
+          <li> <h6><u>View recent projects.</u></h6> </li>
         </ul>
       </div>
       <div class="footer-right">
         <h4>Modern Layouts</h4>
         <ul>
-          <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h5>
-          <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h5>
-          <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h5>
+          <li> <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h5> </li>
+          <li> <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h5> </li>
+          <li> <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h5> </li>
         </ul>
       </div>
     </div>
